--- a/Model.ipynb
+++ b/Model.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "IYkoE2NK_6Dp",
         "colab_type": "code",
-        "outputId": "747dabb6-01b9-4478-a9bb-1bc1106d364a",
+        "outputId": "7efc8afd-717b-4c1c-8a24-ee5643cef034",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -62,7 +62,7 @@
         "    \n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,22 +106,22 @@
       "metadata": {
         "id": "BYxbebexICj7",
         "colab_type": "code",
-        "outputId": "2429bccc-ea49-489a-ff2b-850ca5ffd13e",
+        "outputId": "a4327e9b-1d4b-4cd3-bcc3-3f8760558615",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
+          "height": 122
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
             "\n",
             "Enter your authorization code:\n",
             "··········\n",
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "NRaPKUcA_6ED",
         "colab_type": "code",
-        "outputId": "f6ee1900-d731-460a-a36a-db1bee451bef",
+        "outputId": "f14137fe-a4ed-4c20-b5b4-6bfb25be5413",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -242,7 +242,7 @@
         "\n",
         "train_data.__len__()\n"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -290,7 +290,7 @@
       "metadata": {
         "id": "6EpGMWQ__6Eb",
         "colab_type": "code",
-        "outputId": "63609a22-3dcb-4a10-d320-37cc8bca14d5",
+        "outputId": "151c9099-370b-421c-8260-ec2b8acdb2fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -308,7 +308,7 @@
         "class_names = total_dataset.classes\n",
         "class_names"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -320,7 +320,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -329,7 +329,7 @@
       "metadata": {
         "id": "ILBsQQiJ_6Eg",
         "colab_type": "code",
-        "outputId": "d2af1aa3-b221-4ae2-e79c-1a6b5757e2ec",
+        "outputId": "278627e1-7d63-4227-e582-e26a1185031f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -352,16 +352,8 @@
         "model.to(device)\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading: \"https://download.pytorch.org/models/vgg16_bn-6c64b313.pth\" to /root/.cache/torch/checkpoints/vgg16_bn-6c64b313.pth\n",
-            "100%|██████████| 553507836/553507836 [00:06<00:00, 91490507.27it/s] \n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -370,57 +362,57 @@
               "  (features): Sequential(\n",
               "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (2): ReLU(inplace)\n",
+              "    (2): ReLU(inplace=True)\n",
               "    (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (5): ReLU(inplace)\n",
+              "    (5): ReLU(inplace=True)\n",
               "    (6): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
               "    (7): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (8): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (9): ReLU(inplace)\n",
+              "    (9): ReLU(inplace=True)\n",
               "    (10): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (11): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (12): ReLU(inplace)\n",
+              "    (12): ReLU(inplace=True)\n",
               "    (13): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
               "    (14): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (15): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (16): ReLU(inplace)\n",
+              "    (16): ReLU(inplace=True)\n",
               "    (17): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (18): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (19): ReLU(inplace)\n",
+              "    (19): ReLU(inplace=True)\n",
               "    (20): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (21): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (22): ReLU(inplace)\n",
+              "    (22): ReLU(inplace=True)\n",
               "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
               "    (24): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (25): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (26): ReLU(inplace)\n",
+              "    (26): ReLU(inplace=True)\n",
               "    (27): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (28): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (29): ReLU(inplace)\n",
+              "    (29): ReLU(inplace=True)\n",
               "    (30): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (31): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (32): ReLU(inplace)\n",
+              "    (32): ReLU(inplace=True)\n",
               "    (33): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
               "    (34): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (35): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (36): ReLU(inplace)\n",
+              "    (36): ReLU(inplace=True)\n",
               "    (37): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (38): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (39): ReLU(inplace)\n",
+              "    (39): ReLU(inplace=True)\n",
               "    (40): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (41): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (42): ReLU(inplace)\n",
+              "    (42): ReLU(inplace=True)\n",
               "    (43): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
               "  )\n",
               "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
               "  (classifier): Sequential(\n",
               "    (0): Linear(in_features=25088, out_features=4096, bias=True)\n",
-              "    (1): ReLU(inplace)\n",
-              "    (2): Dropout(p=0.5)\n",
+              "    (1): ReLU(inplace=True)\n",
+              "    (2): Dropout(p=0.5, inplace=False)\n",
               "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
-              "    (4): ReLU(inplace)\n",
-              "    (5): Dropout(p=0.5)\n",
+              "    (4): ReLU(inplace=True)\n",
+              "    (5): Dropout(p=0.5, inplace=False)\n",
               "    (6): Linear(in_features=4096, out_features=7, bias=True)\n",
               "  )\n",
               ")"
@@ -429,7 +421,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -1221,10 +1213,10 @@
       "metadata": {
         "id": "vzS6JwqcSgTl",
         "colab_type": "code",
-        "outputId": "c8661bc2-4b31-4334-e4d9-f2411f5b4a65",
+        "outputId": "df80d0d3-656f-4d9a-d514-db4c6f87f950",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 393
+          "height": 51
         }
       },
       "source": [
@@ -1257,19 +1249,15 @@
         "print(' Accuracy: {}/{} ({:.3f}%)\\n'.format(\n",
         "        correct,len(test_load.dataset), 100. * correct / len(test_load.dataset)))"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-69-c2a8275a7c85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'checkpoint.pt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mcriteria\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCrossEntropyLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtest_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36mload_state_dict\u001b[0;34m(self, state_dict, strict)\u001b[0m\n\u001b[1;32m    775\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_msgs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    776\u001b[0m             raise RuntimeError('Error(s) in loading state_dict for {}:\\n\\t{}'.format(\n\u001b[0;32m--> 777\u001b[0;31m                                self.__class__.__name__, \"\\n\\t\".join(error_msgs)))\n\u001b[0m\u001b[1;32m    778\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0m_IncompatibleKeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmissing_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munexpected_keys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    779\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for VGG:\n\tsize mismatch for classifier.6.weight: copying a param with shape torch.Size([7, 4096]) from checkpoint, the shape in current model is torch.Size([6, 4096]).\n\tsize mismatch for classifier.6.bias: copying a param with shape torch.Size([7]) from checkpoint, the shape in current model is torch.Size([6])."
-          ]
+          "output_type": "stream",
+          "text": [
+            " Accuracy: 5786/7220 (80.139%)\n",
+            "\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
